# rune_vm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE_MIT.md  README.md
examples/: CMakeLists.txt  example0.cpp
include/rune_vm/: Capabilities.hpp  DataView.hpp  Log.hpp  RuneVm.hpp  VirtualInterface.hpp
src/: Capabilities.cpp  Capabilities.hpp  Common.hpp  HostFunctions.cpp  HostFunctions.hpp  Log.cpp  OutputManager.cpp  OutputManager.hpp  Result.cpp  Result.hpp  RuneInterop.cpp  RuneInterop.hpp  RuneVm.cpp
src/backends/: Backends.hpp  CMakeLists.txt
src/backends/wasm3/: CMakeLists.txt  Wasm3Common.cpp  Wasm3Common.hpp  Wasm3Engine.cpp  Wasm3Engine.hpp  Wasm3Rune.cpp  Wasm3Rune.hpp  Wasm3Runtime.cpp  Wasm3Runtime.hpp
src/capabilities/: CMakeLists.txt  CapabilitiesDelegatesManager.cpp  CapabilitiesDelegatesManager.hpp
src/capabilities/delegates/: CMakeLists.txt  DelegateFactory.cpp  DelegateFactory.hpp  RandomCapabilityDelegate.cpp  RandomCapabilityDelegate.hpp
src/inference/: CMakeLists.txt  Inference.cpp  Inference.hpp  ModelManager.cpp  ModelManager.hpp
src/inference/tflite/: CMakeLists.txt  TfLiteRuntime.cpp  TfLiteRuntime.hpp
src/io/: CMakeLists.txt  FormatCapabilitiesParameter.hpp
src/wasm_backends/: Backends.hpp  CMakeLists.txt
src/wasm_backends/wasm3/: CMakeLists.txt  Wasm3Common.cpp  Wasm3Engine.cpp  Wasm3Engine.hpp  Wasm3Rune.cpp  Wasm3Rune.hpp  Wasm3Runtime.cpp  Wasm3Runtime.hpp
tests/: CMakeLists.txt  Common.hpp  GestureRuneTests.cpp  RuneTests.cpp  RuneVmEngineTests.cpp  RuneVmRuntimeTests.cpp  SineRuneTests.cpp  TestLogger.cpp  TestLogger.hpp
tests/test_data/gesture/: gesture.rune
tests/test_data/sine/: sine.rune
